# Live2D-QT6-Pet

./: .gitignore  AudioPlayer.cpp  AudioPlayer.h  CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  ConfirmDialog.cpp  ConfirmDialog.h  DanmakuManager.cpp  DanmakuManager.h  GLCore.cpp  GLCore.h  Menu.cpp  Menu.h  MenuModelFiles.cpp  MenuModelFiles.h  MenuSetting.cpp  MenuSetting.h  MessageBox.cpp  MessageBox.h  README.md  TableViewModel.cpp  TableViewModel.h  main.cpp  modelSpecification.md
LAppLive2D/Inc/: LAppModel.hpp
LAppLive2D/Src/: LAppLive2DManager.cpp  LAppModel.cpp  LAppView.cpp
config/: ConfigManager.cpp  ConfigManager.h
menus/: Menu.cpp  Menu.h  MenuModelFiles.cpp  MenuModelFiles.h  MenuSetting.cpp  MenuSetting.h
tools/: AudioPlayer.cpp  AudioPlayer.h  DanmakuManager.cpp  DanmakuManager.h
widgets/: ConfirmDialog.cpp  ConfirmDialog.h  MessageBox.cpp  MessageBox.h  TableViewModel.cpp  TableViewModel.h
